--- a/test.ipynb
+++ b/test.ipynb
@@ -221,11 +221,163 @@
     "cam.close()\n",
     "pvc.uninit_pvcam()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5fec0264",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylablib.devices import uc480, DCAM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f2610eea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cam_id = uc480.list_cameras(backend='ueye')[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "1b264e64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cam_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d65bf2dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cam = uc480.UC480Camera(0, backend='ueye')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "316bb16f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cam.start_acquisition()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e1d6282f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70000000.0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cam.set_pixel_rate(7e7)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1d76ad9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "240000000.0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cam.get_pixel_rate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d759f39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4e263d95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TAcquiredFramesStatus(acquired=27, transfer_missed=0, frameskip_events=0)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cam.get_acquired_frame_status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "eae04708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cam.stop_acquisition()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "67b633fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cam.snap()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "acquisition",
+   "display_name": "basler",
    "language": "python",
    "name": "python3"
   },
@@ -239,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
